# codemeter

./: .gitignore  LICENSE.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  main.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
